kubernetes/service-flask.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: flask-app
    name: flask-app
spec:
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
        app: flask-app
    type: ClusterIP
